tests/error/type_errors/fun_ty_mismatch_3.err
Error: Type mismatch (at $FILE:10:15)
   | 
 8 |         return f(42)
 9 | 
10 |     return bar(foo)
   |                ^^^ Expected argument of type `int -> bool`, got `int -> int`

Guppy compilation failed due to 1 previous error
